created database and added signup page php

--- a/components/svg.html
+++ b/components/svg.html
@@ -45,3 +45,16 @@
 ><svg class="icon">
   <use xlink:href="#wordpress"></use>
 </svg>
+
+<!-- SVG References -->
+<svg class="icon">
+  <use xlink:href="#formkit_visa (1)"></use></svg
+><svg class="icon">
+  <use xlink:href="#Group (1)"></use></svg
+><svg class="icon">
+  <use xlink:href="#hugeicons_paypal (1)"></use></svg
+><svg class="icon">
+  <use xlink:href="#iconoir_delivery-truck (1)"></use></svg
+><svg class="icon">
+  <use xlink:href="#logos_mastercard (1)"></use>
+</svg>
